--- a/backend/package.json
+++ b/backend/package.json
@@ -21,9 +21,11 @@
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "express-rate-limit": "^8.2.1",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
     "nodemailer": "^7.0.10",
+    "redis": "^5.9.0",
     "streamifier": "^0.1.1",
     "zod": "^4.1.11"
   },
