--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,8 +14,9 @@
     "@emotion/styled": "^11.14.1",
     "@fontsource/inter": "^5.2.8",
     "@hookform/resolvers": "^5.2.2",
-    "@mui/icons-material": "^7.3.2",
+    "@mui/icons-material": "^7.3.5",
     "@mui/joy": "^5.0.0-beta.52",
+    "@mui/material": "^7.3.5",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-popover": "^1.1.15",
