--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "browser-image-compression": "^2.0.2",
     "class-variance-authority": "^0.7.1",
     "cmdk": "^1.1.1",
+    "framer-motion": "^12.23.24",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.544.0",
     "react": "^19.1.1",
