--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -45,40 +45,27 @@
 //  "include": ["src/**/*", "types/**/*.d.ts"]
 // }
 
-
 {
   "compilerOptions": {
-    /* File Layout */
     "rootDir": "./src",
     "outDir": "./dist",
 
-    /* Environment Settings */
     "module": "CommonJS",
     "target": "ES2020",
     "lib": ["ESNext"],
-    "types": ["node", "express", "cors", "jsonwebtoken", "multer"],
     "typeRoots": ["./node_modules/@types", "./types"],
 
-    /* Output Options */
     "sourceMap": true,
     "declaration": true,
     "declarationMap": true,
 
-    /* Strict Type Checking */
     "strict": true,
-    "noUncheckedIndexedAccess": true,
-    "exactOptionalPropertyTypes": true,
-
-    /* Module Settings */
     "esModuleInterop": true,
     "skipLibCheck": true,
     "moduleResolution": "node",
     "resolveJsonModule": true,
-
-    /* Optional Cleanup */
-    "noImplicitReturns": true,
-    "noUnusedLocals": false,
-    "noUnusedParameters": false
+    "noUncheckedIndexedAccess": true,
+    "exactOptionalPropertyTypes": true
   },
   "include": ["src/**/*", "types/**/*.d.ts"],
   "exclude": ["node_modules"]
