--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -44,7 +44,6 @@
 //   }, 
 //  "include": ["src/**/*", "types/**/*.d.ts"]
 // }
-
 {
   "compilerOptions": {
     "rootDir": "./src",
@@ -54,6 +53,7 @@
     "target": "ES2020",
     "lib": ["ESNext"],
     "typeRoots": ["./node_modules/@types", "./types"],
+    "types": ["node", "express", "cors", "jsonwebtoken", "multer"],
 
     "sourceMap": true,
     "declaration": true,
