--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc --noEmitOnError false",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "dev": "ts-node-dev --respawn --transpile-only src/index.ts"
   },
   "dependencies": {
     "@prisma/client": "^6.19.0",
@@ -22,9 +23,8 @@
     "nodemailer": "^7.0.10",
     "redis": "^5.9.0",
     "streamifier": "^0.1.1",
-    "zod": "^4.1.11"
-  },
-  "devDependencies": {
+    "zod": "^4.1.11",
+
     "@types/bcrypt": "^6.0.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/cookie-parser": "^1.4.10",
@@ -33,9 +33,12 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/multer": "^2.0.0",
     "@types/node": "^24.10.0",
-    "@types/nodemailer": "^7.0.3",
+    "@types/nodemailer": "^7.0.3"
+  },
+  "devDependencies": {
     "prisma": "^6.19.0",
     "tsx": "^4.20.5",
-    "typescript": "^5.9.2"
+    "typescript": "^5.9.2",
+    "ts-node-dev": "^2.0.0"
   }
 }
