--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,15 @@
   },
   "dependencies": {
     "@prisma/client": "^6.19.0",
+    "@types/bcrypt": "^6.0.0",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/cookie-parser": "^1.4.10",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.5",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/multer": "^2.0.0",
+    "@types/node": "^24.10.0",
+    "@types/nodemailer": "^7.0.3",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.3",
     "cloudinary": "^2.7.0",
@@ -22,23 +31,14 @@
     "multer": "^2.0.2",
     "nodemailer": "^7.0.10",
     "redis": "^5.9.0",
+    "resend": "^6.4.2",
     "streamifier": "^0.1.1",
-    "zod": "^4.1.11",
-
-    "@types/bcrypt": "^6.0.0",
-    "@types/bcryptjs": "^2.4.6",
-    "@types/cookie-parser": "^1.4.10",
-    "@types/cors": "^2.8.19",
-    "@types/express": "^5.0.5",
-    "@types/jsonwebtoken": "^9.0.10",
-    "@types/multer": "^2.0.0",
-    "@types/node": "^24.10.0",
-    "@types/nodemailer": "^7.0.3"
+    "zod": "^4.1.11"
   },
   "devDependencies": {
     "prisma": "^6.19.0",
+    "ts-node-dev": "^2.0.0",
     "tsx": "^4.20.5",
-    "typescript": "^5.9.2",
-    "ts-node-dev": "^2.0.0"
+    "typescript": "^5.9.2"
   }
 }
